--- a/src/SimplCommerce.WebHost/Views/Shared/_LoginPartial.cshtml
+++ b/src/SimplCommerce.WebHost/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
     }
     <li class="nav-item">
         <form asp-area="Core" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="">
-            <button type="submit" class="btn btn-link">@Localizer["Log off"]</button>
+            <button type="submit" class="btn nav-link">@Localizer["Log off"]</button>
         </form>
     </li>
 }
