--- a/src/SimplCommerce.WebHost/Views/Shared/_Layout.cshtml
+++ b/src/SimplCommerce.WebHost/Views/Shared/_Layout.cshtml
@@ -58,51 +58,49 @@
     </div>
     <div class="footer-content">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row" style="justify-content: space-evenly;">
+                <div class="col-auto">
                     <h4>@Localizer["Customer Service"]</h4>
                     <vc:menu menu-id="1"></vc:menu>
                 </div>
-                <div class="col-md-6">
+                <div class="col-auto">
                     <h4>@Localizer["Information"]</h4>
                     <vc:menu menu-id="2"></vc:menu>
                 </div>
-                <div class="col-md-3">
-                    <div class="pull-right">
-                        <h4>Siga-nos</h4>
-                        <ul class="menu social">
-                            <li>
-                                <a href="https://www.instagram.com/flordezaya" target="_blank" title="Instagram">
-                                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                                    <span>Instagram</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/flordezaya" target="_blank" title="Facebook">
-                                    <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                                    <span>Facebook</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="/" target="_blank" title="Youtube">
-                                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                    <span>Youtube</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://api.whatsapp.com/send?phone=5511997898054" target="_blank" title="Youtube">
-                                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                                    <span>WhatsApp</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:contato@flordezaya.com.br" target="_blank" title="Youtube">
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <span>Email</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="col-auto">
+                    <h4>Siga-nos</h4>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="https://www.instagram.com/flordezaya" target="_blank" title="Instagram">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                                <span>Instagram</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/flordezaya" target="_blank" title="Facebook">
+                                <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                                <span>Facebook</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/" target="_blank" title="Youtube">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                                <span>Youtube</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://api.whatsapp.com/send?phone=5511997898054" target="_blank" title="Youtube">
+                                <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                                <span>WhatsApp</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:contato@flordezaya.com.br" target="_blank" title="Youtube">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>
+                                <span>Email</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <hr />
