--- a/src/SimplCommerce.WebHost/Views/Shared/_Layout.cshtml
+++ b/src/SimplCommerce.WebHost/Views/Shared/_Layout.cshtml
@@ -131,7 +131,8 @@
     <script simpl-append-version="true" src="~/lib/matchheight/jquery.matchHeight.js"></script>
     <script simpl-append-version="true" src="~/lib/toastr/build/toastr.min.js"></script>
     <script simpl-append-version="true" src="~/lib/bootstrap-star-rating/js/star-rating.js"></script>
-    <script simpl-append-version="true" src="~/lib/signalr/dist/browser/signalr.js"></script>    @if (CultureInfo.CurrentCulture.Name != SimplCommerce.Infrastructure.GlobalConfiguration.DefaultCulture)    {
+    <script simpl-append-version="true" src="~/lib/signalr/dist/browser/signalr.js"></script>    @if (CultureInfo.CurrentCulture.Name != SimplCommerce.Infrastructure.GlobalConfiguration.DefaultCulture)
+    {
         <script simpl-append-version="true" src="~/lib/bootstrap-star-rating/js/locales/@(CultureInfo.CurrentCulture.Name).js"></script>
     }
     <script simpl-append-version="true" src="~/_content/SimplCommerce.Module.Core/main.js"></script>
